# subtitle_AI_translator

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .env  api.py  main.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ai-model-selector.tsx  subtitle-display.tsx  subtitle-service.tsx  text-translation.tsx
frontend/src/models/: languages.ts
frontend/src/services/: api.ts
frontend/src/types/: ai-model.ts
