[project]
name = "ai-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctranslate2>=4.4.0",
    "fastapi>=0.115.0",
    "huggingface-hub>=0.25.1",
    "protobuf>=5.28.2",
    "python-multipart>=0.0.12",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.45.1",
    "uvicorn>=0.32.0",
]
